automatically updates session logs to end sessions after 12 hours

--- a/static/style.css
+++ b/static/style.css
@@ -662,6 +662,8 @@ form button:hover {
         border: none;
         margin-top: none;
         z-index: 10000;
+        display: flex;
+        justify-content: space-evenly;
     }
 
     #sidebar h1, #sidebar a {
