--- a/static/style.css
+++ b/static/style.css
@@ -220,7 +220,7 @@ body {
 .post {
     position: relative;
     background-color: #fff;
-    padding: 20px 0;
+    padding: 0;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 20px;
@@ -253,8 +253,26 @@ body {
 .post h4 {
     text-align: center;
     vertical-align: center;
-    margin-top: 0;
-    font-size: 25px;
+    font-size: 22px;
+    margin: 0;
+}
+
+.post_header {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    border-bottom: 1px solid lightgrey;
+    background-color: #EFFBFE;
+    border-radius: 10px 10px 0 0;
+    padding-top: 10px;
+}
+
+.post_profile_image {
+    width: 40px;
+    height: 20px;
+    border-radius: 50%;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 /* CSS STYLING FOR THE FISH IDENTIFIER AI */
