--- a/static/style.css
+++ b/static/style.css
@@ -267,6 +267,20 @@ body {
     padding-top: 10px;
 }
 
+.post_footer {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    border-top: 1px solid lightgrey;
+    background-color: #EFFBFE;
+    border-radius: 0 0 10px 10px;
+    padding: 10px;
+}
+
+.post_footer p {
+    text-align: left;
+}
+
 .post_profile_image {
     width: 40px;
     height: 20px;
