--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,10 @@
                         <h4>{{ post[2] }}</h4>
                     </div>
                     <img src="{{ url_for('static', filename=post[0]) }}" alt="Post Image">
-                    <p>{{ post[1] }}</p>
+                    <div class="post_footer">
+                        <h4>{{ post[2] }}:</h4>
+                        <p>{{ post[1] }}</p>
+                    </div>
                 </div>
             {% endfor %}
         {% else %}
