--- a/static/style.css
+++ b/static/style.css
@@ -229,10 +229,10 @@ body {
 
 .post img {
     max-width: 100%;
-    margin-bottom: 10px;
     max-height: 300px;
     height: auto;
     object-fit: contain;
+    margin-top: 5px;
 }
 
 .post p {
@@ -505,7 +505,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%; /* Ensure the form takes the full width of the modal content */
+    width: 93%; /* Ensure the form takes the full width of the modal content */
 }
 
 .modal-content input[type="text"],
