--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,18 @@
         {% if posts %}
             {% for post in posts %}
                 <div class="post">
-                    <h4>{{ post[2] }}</h4>
+                    <div class="post_header">
+                        {% if post[3] %}
+                            <img src="{{ url_for('static', filename=post[3]) }}" alt="Profile Image" class="post_profile_image">
+                        {% else %}
+                            <img src="{{ url_for('static', filename='/images/blank_profile_pic.png') }}" alt="Profile Image" class="post_profile_image">
+                        {% endif %}
+                        <h4>{{ post[2] }}</h4>
+                    </div>
                     <img src="{{ url_for('static', filename=post[0]) }}" alt="Post Image">
-                    <p>{{ post[1] }}</p>
+                    <div class="post_footer">
+                        <p>{{ post[1] }}</p>
+                    </div>
                 </div>
             {% endfor %}
         {% else %}
