--- a/templates/profile.html
+++ b/templates/profile.html
@@ -64,7 +64,7 @@
                 <label for="username">Username: *</label>
                 <input type="text" id="username" name="username" value="{{ user_data[1] }}" required>
                 <label for="email">Email:</label>
-                <input type="text" id="email" name="email" value="{{ user_data[3] }}" required>
+                <input type="text" id="email" name="email" value="{{ user_data[3] }}">
                 <button type="submit">Save Changes</button>
             </form>
         </div>
