fixed number of users graph

--- a/static/login_style.css
+++ b/static/login_style.css
@@ -301,4 +301,13 @@ p {
         font-size: 45px;
         text-align: center;
     }
+
+    p {
+        font-size: 20px;
+    }
+
+    .flashes {
+        top: 50px;
+        left: 35%;
+    }
 }
