--- a/static/style.css
+++ b/static/style.css
@@ -578,6 +578,64 @@ body {
     background-color: #0056b3;
 }
 
+/* STYLING FOR ADMIN HOME PAGE */
+
+#admin_home_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%; /* Prevents overlap with the sidebar */
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color:rgba(255, 255, 255, 0.5)
+}
+
+.admin-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.admin-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    max-height: 20px;
+    width: 140px;
+}
+
+.admin-button:hover {
+    background-color: #0056b3;
+}
+
+#chart-container {
+    width: 100%;
+    min-width: 400px;
+    max-width: 800px;
+    height: 400px;
+    margin-top: 20px;
+    padding: 10px;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+#loggedInUsersChart {
+    width: 100%;
+    height: 100%;
+}
+
 /* CSS STYLING FOR ADMIN TABLES */
 
 table {
