--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -7,10 +7,20 @@
         <h2>Register</h2>
         <form action="{{ url_for('register') }}" method="post">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-            <input type="text" id="username" name="username" placeholder="Username *" required>
-            <input type="password" id="password" name="password" placeholder="Password *" required>
-            <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password *" required>
-            <input type="email" id="email" name="email" placeholder="Email">
+            <div class="input-container">
+                <input type="text" id="username" name="username" placeholder="Username *" required>
+            </div>
+            <div class="input-container">
+                <input type="password" id="password" name="password" placeholder="Password *" required>
+                <span class="toggle-password" onclick="togglePasswordVisibility('password')">&#128065;</span>
+            </div>
+            <div class="input-container">
+                <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password *" required>
+                <span class="toggle-password" onclick="togglePasswordVisibility('confirm_password')">&#128065;</span>
+            </div>
+            <div class="input-container">
+                <input type="email" id="email" name="email" placeholder="Email">
+            </div>
             <div class="mfa_checkbox">
                 <input type="checkbox" id="mfa" name="mfa">
                 <label for="mfa">Activate MFA</label>
@@ -20,5 +30,16 @@
         </form>
     </div>
 </div>
+
+<script>
+    function togglePasswordVisibility(fieldId) {
+        const field = document.getElementById(fieldId);
+        if (field.type === "password") {
+            field.type = "text";
+        } else {
+            field.type = "password";
+        }
+    }
+</script>
 
 {% endblock %}
