--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -9,11 +9,23 @@
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <input type="text" id="username" name="username" placeholder="Username" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
+            <span class="toggle_password_login" onclick="togglePasswordVisibility('password')">&#128065;</span>
             <br>
             <button type="submit">Login</button>
             <p>Don't have an account? <a href="/register" id="register">Register</a></p>
         </form>
     </div>
 </div>
+
+<script>
+    function togglePasswordVisibility(fieldId) {
+        const field = document.getElementById(fieldId);
+        if (field.type === "password") {
+            field.type = "text";
+        } else {
+            field.type = "password";
+        }
+    }
+</script>
 
 {% endblock %}
