added a popup for register password info

--- a/static/login_style.css
+++ b/static/login_style.css
@@ -81,6 +81,32 @@ body {
     color: lightgrey;
 }
 
+/* Styling for the tooltip */
+.tooltip {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    z-index: 100;
+}
+
+.tooltip::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -5px;
+    transform: translateY(-50%);
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent #333 transparent transparent;
+}
+
 /* Styling for the MFA boxes */
 
 .mfa_checkbox {
