--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                     <input type="file" name="image" accept="image/*" onchange="previewPostImage(event)" required>
                     <img id="PostImagePreview" src="#" alt="Post Image Preview" style="display: none; margin-top: 10px; margin-bottom: 10px; max-width: 100%;">
-                    <textarea name="caption" placeholder="Add a caption..."></textarea>
+                    <textarea name="caption" placeholder="Add a caption... (Only the following special characters are allowed: . , - _)"></textarea>
                     <button type="submit">Post</button>
                 </form>
             </div>
